# parallel-Calculate

./: CMakeLists.txt  MPI_Main.cpp  MPI_OpenMP_Main.cpp  MPI_OpenMP_Simulated_Annealing_TSP.cpp  MPI_Simulated_Annealing_TSP.cpp  OpenMP_Simulated_Annealing_TSP.cpp  SimulatedAnnealing.cpp  SimulatedAnnealing.h  Simulated_Annealing_TSP.cpp  Tour.cpp  Tour.h  city.h  main.cpp
K路归并/: main.cpp  归并排序并行测试11.txt  新建文本文档.txt
OpenMP_Anneal_Fire/: OpenMP_Anneal_Fire.vcxproj  test.txt
OpenMP_Anneal_Fire/Debug/OpenMP_A.A57DD855.tlog/: CL.write.1.tlog  link.write.1.tlog
VScode/Parallel_HomeWork/Parallel_HomeWork/Debug/: tsp测试数据1.txt
VScode/Parallel_HomeWork/Parallel_HomeWork/Debug/Parallel.2E38E24C.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog
VScode/Parallel_HomeWork/test/: main.cpp  test.vcxproj  test.vcxproj.filters
VScode/Parallel_HomeWork/test/Debug/: vc140.idb
VScode/Parallel_HomeWork/test/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
退火算法/: MPI_Main.cpp  OpenMP_Main.cpp  Tour.cpp  Tour.h  city.h  main.cpp
退火算法/OpenMP_Anneal_Fire/: main.cpp
退火算法/OpenMP_Anneal_Fire/Debug/: vc140.idb
退火算法/OpenMP_Anneal_Fire/Debug/OpenMP_A.A57DD855.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
退火算法/VScode/Parallel_HomeWork/: Parallel_HomeWork.sln
退火算法/VScode/Parallel_HomeWork/Parallel_HomeWork/: Parallel_HomeWork.vcxproj  Parallel_HomeWork.vcxproj.filters
退火算法/VScode/Parallel_HomeWork/test/: tsp测试数据2.txt
(+5 files in other folders)
